--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 Werkzeug==0.15.3
+flask_sqlalchemy==2.4.1
+sqlalchemy==1.3.11
+flask_admin==1.5.3
+flask_login==0.4.1
+pyodbc==4.0.27
